--- a/styles/main.css
+++ b/styles/main.css
@@ -187,13 +187,56 @@ footer {
   margin-top: 5%;
 }
 
+.menu-icon {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  padding: 1.5rem;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-color: var(--color-primary);
+  z-index: 2;
+}
+
+.menu-icon line {
+  stroke: #fff;
+  stroke-width: 3px;
+  stroke-linecap: round;
+  transform-origin: center;
+  transition: transform 300ms ease;
+}
+
+.menu-icon line:first-child {
+  transform: translateY(16%);
+}
+
+.menu-icon line:last-child {
+  transform: translateY(-16%);
+}
+
+/* JavaScript toggles a "close" class on the <nav> when the menu-icon is clicked */
+.close nav {
+  display: block;
+}
+
+.close line:first-child {
+  transform: rotate(135deg);
+}
+
+.close line:last-child {
+  transform: rotate(-135deg);
+}
+
+
 nav {
   display: flex;
   flex-direction: row;
   justify-content: flex-end; 
   align-items: stretch; 
   align-content: center;
-
+  background-color: var(--color-primary);
+  color: white;
 }
 
 nav ul {
@@ -207,20 +250,21 @@ nav ul {
   margin: 0; 
   align-content: center;
   font-size: 1.2rem;
+  color: white;
 }
 
 nav li {
   margin: 0;
   align-content: center;
-
+  color: white;
 }
 
 nav a {
-  display: block; /* Change the display property to block to allow for padding and margins */
+  display: block; 
   padding: 2rem; 
   color: white;
   text-decoration: none;
-  transition: all 0.2s ease-in-out; /* Add a transition for hover effects */
+  transition: all 0.2s ease-in-out; 
   height: 6rem;
   align-content: center;
 }
@@ -230,7 +274,6 @@ nav a:hover {
   color: var(--color-primary);
   transition: all 0.2s
 }
-
 
 .hero {
   position: relative;
@@ -349,7 +392,45 @@ nav a:hover {
   .card {
     flex: 1 0 45%;
   }
+
+  
+  .menu-icon {
+    display: none;
+  }
+
+ 
+
+  nav {
+   
+  }
+
+  nav ul {
+    position: fixed;
+    background-color: var(--color-primary);
+    color: white;
+    top: 0;
+    left: 0;
+    width: 100%vw;
+    height: 100%vh;
+  }
+
+  nav li {
+    
+    position: fixed;
+    background-color: var(--color-primary);
+    color: white;
+    top: 0;
+    left: 0;
+    width: 100%vw;
+    height: 100%vh;
+  }
+
+  nav li a {
+    
+    
+  }
 }
+
 
 @media screen and (min-width: 1024px) {
   .cards {
@@ -397,7 +478,7 @@ nav a:hover {
 
 .panel .image-wrapper {
   flex: 1 1 60%;
-  margin 1rem;
+  margin: 1rem;
 }
 
 .panel .left{
@@ -406,6 +487,7 @@ nav a:hover {
 
 @media (min-width: 401px) {
   /* tablet CSS */
+  .panel
 }
 
 @media (min-width: 801px) {
