--- a/styles/main.css
+++ b/styles/main.css
@@ -159,7 +159,7 @@ ul {
   margin: 10px;
   font-size: 1rem;
   transition: background-color 300ms ease, color 300ms ease, border 300ms,
-  font-size 300ms;
+    font-size 300ms;
 }
 
 .button:hover {
@@ -215,9 +215,36 @@ footer {
   transform: translateY(-16%);
 }
 
+nav {
+  display: none;
+  background-color: var(--color-primary);
+}
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 0 3rem;
+  font-size: 2rem;
+}
+
+nav a {
+  display: block;
+  padding: 2rem;
+  color: white;
+  text-decoration: none;
+}
+
 /* JavaScript toggles a "close" class on the <nav> when the menu-icon is clicked */
 .close nav {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  inset: 0;
+  z-index: 1;
 }
 
 .close line:first-child {
@@ -226,53 +253,6 @@ footer {
 
 .close line:last-child {
   transform: rotate(-135deg);
-}
-
-
-nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end; 
-  align-items: stretch; 
-  align-content: center;
-  background-color: var(--color-primary);
-  color: white;
-}
-
-nav ul {
-  background-color: var(--color-primary);
-  list-style-type: none;
-  padding: 0;
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  justify-content: flex-end;
-  margin: 0; 
-  align-content: center;
-  font-size: 1.2rem;
-  color: white;
-}
-
-nav li {
-  margin: 0;
-  align-content: center;
-  color: white;
-}
-
-nav a {
-  display: block; 
-  padding: 2rem; 
-  color: white;
-  text-decoration: none;
-  transition: all 0.2s ease-in-out; 
-  height: 6rem;
-  align-content: center;
-}
-
-nav a:hover {
-  background-color: white;
-  color: var(--color-primary);
-  transition: all 0.2s
 }
 
 .hero {
@@ -309,7 +289,7 @@ nav a:hover {
 .hero p {
   color: white;
   font-size: 5vw;
-  max-width: 80%; 
+  max-width: 80%;
   text-align: center;
 }
 
@@ -381,6 +361,25 @@ nav a:hover {
   margin: 0;
 }
 
+.panel {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 0 2rem 10rem;
+}
+
+.panel h2 {
+  margin-bottom: 1rem;
+}
+
+.panel .image-wrapper {
+  order: -1;
+}
+
+@media (min-width: 401px) {
+  /* tablet CSS */
+}
+
 @media screen and (min-width: 600px) {
   .cards {
     flex-wrap: wrap;
@@ -393,44 +392,53 @@ nav a:hover {
     flex: 1 0 45%;
   }
 
-  
   .menu-icon {
     display: none;
   }
 
- 
-
   nav {
-   
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: stretch;
   }
 
   nav ul {
-    position: fixed;
-    background-color: var(--color-primary);
-    color: white;
-    top: 0;
-    left: 0;
-    width: 100%vw;
-    height: 100%vh;
+    flex-direction: row;
+    width: 100%;
+    justify-content: flex-end;
+    margin: 0;
+    font-size: 1.2rem;
   }
 
-  nav li {
-    
-    position: fixed;
-    background-color: var(--color-primary);
-    color: white;
-    top: 0;
-    left: 0;
-    width: 100%vw;
-    height: 100%vh;
+  nav a {
+    transition: background-color 0.2s ease-in-out;
   }
 
-  nav li a {
-    
-    
+  nav a:hover {
+    background-color: white;
+    color: var(--color-primary);
   }
 }
 
+@media (min-width: 801px) {
+  .panel {
+    flex-direction: row;
+    gap: 2rem;
+  }
+
+  .panel .image-wrapper {
+    order: 0;
+  }
+
+  .panel .left {
+    order: -1;
+  }
+
+  .panel h2 {
+    margin-top: 0;
+  }
+}
 
 @media screen and (min-width: 1024px) {
   .cards {
@@ -452,44 +460,4 @@ nav a:hover {
   .card p {
     font-size: 1.2rem;
   }
-}
-
-
-.panel {
-  display: flex;
-  flex-direction: row;
-  gap: 1rem;
-  align-content: center;
-  margin-bottom: 10rem;
-}
-
-.panel a {
-  padding: 1rem;
-}
-
-.panel h2 {
-  margin-bottom: 1rem;
-}
-
-.panel .text-wrapper {
-  flex: 1 1 40%;
-  margin: 5rem;
-}
-
-.panel .image-wrapper {
-  flex: 1 1 60%;
-  margin: 1rem;
-}
-
-.panel .left{
-  order: -1;
-}
-
-@media (min-width: 401px) {
-  /* tablet CSS */
-  .panel
-}
-
-@media (min-width: 801px) {
-  /* desktop CSS */
 }
