--- a/styles/main.css
+++ b/styles/main.css
@@ -258,13 +258,14 @@ nav a {
 .hero {
   position: relative;
   overflow: hidden;
-  height: auto;
+  height: 80vh;
 }
 
 .hero .text-wrapper {
   position: absolute;
   inset: 0;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: 6rem;
@@ -277,6 +278,7 @@ nav a {
   position: absolute;
   inset: 0;
   z-index: -99;
+  height: 80vh;
 }
 
 .video-foreground,
